remove unnecessary files

--- a/templates/game/game.html
+++ b/templates/game/game.html
@@ -206,8 +206,6 @@
     var username = '{{ username }}'; //유저 이름
     var teamid = '{{ team_id }}'; //유저의 team id
 
-    console.log("this is teamid!!!! : ", teamid);
-
     var user_money = '{{ user_money }}';
     var user_level = '{{ user_level }}';
 
@@ -278,7 +276,7 @@
     }
 
     function img_error(){
-    console.error("이미지 로딩 에러 났습니다!");
+    console.error("image loading error!");
     }
 
 </script>
