--- a/templates/game/index.html
+++ b/templates/game/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport"
         content="width=device-width,initial-scale=1.0, minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
     <title>LOGIN</title>
-    <!--id 입력창 꾸미기 첫번째꺼는 닉네임 입력창, 두번째는 중심으로 옮기는 거-->
+    <!--[ny]id 입력창 꾸미기 첫번째꺼는 닉네임 입력창, 두번째는 중심으로 옮기는 거-->
     <link rel="stylesheet" href="/static/css/style.css">
     <link rel="stylesheet" href="/static/css/animation.css">
 
@@ -45,7 +45,7 @@
 
 <body>
     {% for message in messages %}
-    <script>alert('{{ message }}')</script> <!--일치하는 닉네임 없을 때 오류 메세지-->
+    <script>alert('{{ message }}')</script> <!--[ny]일치하는 닉네임 없을 때 오류 메세지-->
     {% endfor %}
 
     <div class="page">
