--- a/templates/game/info.html
+++ b/templates/game/info.html
@@ -6,7 +6,7 @@
     <meta name="viewport"
         content="width=device-width,initial-scale=1.0, minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
     <title>LOGIN</title>
-    <!--id 입력창 꾸미기 첫번째꺼는 닉네임 입력창, 두번째는 중심으로 옮기는 거-->
+    <!--[ny]id 입력창 꾸미기 첫번째꺼는 닉네임 입력창, 두번째는 중심으로 옮기는 거-->
     <link rel="stylesheet" href="/static/css/style.css">
     <link rel="stylesheet" href="/static/css/animation.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -322,7 +322,6 @@ setTimeout(function () {
         document.getElementById('text_channel').classList.add("blink");
         document.getElementById('text_tutorial').classList.add("blink");
     }, 1800);
-  /*var addActive = setInterval(activeFunc, 200);*/
 </script>
 
 </html>
