[ds] docstring(before) + some minors

--- a/static/css/bottom.css
+++ b/static/css/bottom.css
@@ -1,14 +1,14 @@
 /*
 ##########################################
 
-@ BOTTOM component에 해당하는 css
+@[ny] BOTTOM component에 해당하는 css
 
 *버튼
 
 ##########################################
 */
 
-/* 버튼 */
+/* [ny]버튼 */
 .btn {
     font-family: 'DungGeunMo';
     font-size: 20px;
