--- a/static/css/animation.css
+++ b/static/css/animation.css
@@ -1,7 +1,7 @@
 /*
 ##########################################
 
-@ ANIMATION 구현에 해당하는 css
+[ny]@ ANIMATION 구현에 해당하는 css
 
 *깜빡임
 *로딩
@@ -10,7 +10,7 @@
 */
 
 
-/* 깜빡임 애니메이션 */
+/* [ny]깜빡임 애니메이션 */
 .blinking {
   -webkit-animation: blink 0.35s ease-in-out infinite alternate;
   -moz-animation: blink 0.35s ease-in-out infinite alternate;
@@ -47,7 +47,7 @@
   }
 }
 
-/* 로딩 애니메이션 */
+/* [ny]로딩 애니메이션 */
 .dot-pulse {
   --uib-size: 40px;
   --uib-speed: 1.3s;
@@ -97,7 +97,7 @@
   }
 }
 
-/* 타이핑 애니메이션 */
+/* [ny]타이핑 애니메이션 */
 
 .typewriter p {
   color: black;
@@ -167,15 +167,15 @@
   }
 }
 
-/* 아이콘 움직이는 애니메이션 */
+/* [ny]아이콘 움직이는 애니메이션 */
 .icon {
   font-size: 5em;
   animation: motion 0.7s
-    /* 속도 */
+    /* [ny]속도 */
     linear 0s
-    /* 처음부터 끝까지 일정 속도로 진행 */
+    /* [ny]처음부터 끝까지 일정 속도로 진행 */
     infinite alternate;
-  /* 무한 반복 */
+  /* [ny]무한 반복 */
   animation-delay: 3s
 }
 
@@ -184,12 +184,12 @@
     margin-top: 0px;
   }
 
-  /* 처음 위치 */
+  /* [ny]처음 위치 */
   100% {
     margin-top: 10px;
   }
 
-  /* 마지막 위치 */
+  /* [ny]마지막 위치 */
 }
 
 /*progress bar animation*/
@@ -210,7 +210,7 @@
   width: 0;
 }
 
-/*코인 움직이는 애니메이션*/
+/*[ny]코인 움직이는 애니메이션*/
 #coin {
   animation: motion 0.6s linear 0s infinite alternate;
   margin-top: 0;
@@ -226,7 +226,7 @@
   }
 }
 
-/*text 깜빡임 효과*/
+/*[ny]text 깜빡임 효과*/
 @keyframes blink-effect {
   50% {
     opacity: 0.7;
@@ -237,7 +237,7 @@
   animation: blink-effect 0.8s step-end infinite;
 }
 
-/* 채널 깜빡임 효과 */
+/*[ny] 채널 깜빡임 효과 */
 @keyframes channel-blink-effect {
   50% {
     opacity: 0.6;
@@ -248,7 +248,7 @@
   animation: channel-blink-effect 0.9s step-end infinite;
 }
 
-/* game caption 깜빡임 효과 */
+/*[ny] game caption 깜빡임 효과 */
 @keyframes caption-blink-effect {
   50% {
     opacity: 0.2;
@@ -259,7 +259,7 @@
   animation: caption-blink-effect 0.8s step-end infinite;
 }
 
-/*pass 문구 effect*/
+/*[ny]pass 문구 effect*/
 
 .pass_span {
   display: inline-block;
@@ -289,7 +289,7 @@
   width: 10px;
 }
 
-/*glance 로딩 애니메이션*/
+/*[ny]glance 로딩 애니메이션*/
 
 .loading div{
 
@@ -322,7 +322,7 @@
   }
 }
 
-/*지목 당했을 때*/
+/*[ny]지목 당했을 때*/
 @keyframes warning {
   0%{
     background-color: white;
@@ -337,40 +337,9 @@
   animation-duration: 1.3s;
   animation-iteration-count: infinite;
 }
-/* 최후의 변론 시
-@keyframes last_mentioning {
-  0%{
-    background-color: white;
-  }
-  100%{
-    background-color: rgb(255, 254, 211);
-  }
-}
-
-.last_mentionings {
-  animation-name: last_mentioning;
-  animation-duration: 1.3s;
-  animation-iteration-count: infinite;
-} */
 
 
-/* 최후의 변론 시
-@keyframes warning_point {
-  0%{
-    background-color: white;
-  }
-  100%{
-    background-color: rgb(255, 201, 201);
-  }
-}
-
-.warnings_point {
-  animation-name: warning;
-  animation-duration: 1.1s;
-  animation-iteration-count: infinite;
-} */
-
-/*정체 밝히기 애니메이션*/
+/*[ny]정체 밝히기 애니메이션*/
 @keyframes moving {
   0% {
       transform: translate(-80%, 0%);
@@ -400,7 +369,7 @@
   animation-fill-mode: forwards;
 }
 
-/*유령 죽음*/
+/*[ny]유령 죽음*/
 @keyframes go_up {
   0%{
       opacity:1;
